# industrial-robot-vision

./: .clang-format  .gitignore  BACKLOG_v1_3.md  CMakeLists.txt  DEVLOG.md  LICENSE  README.md  run.bat
config/: settings.json
include/: CalibrationManager.h  CalibrationWizard.h  CameraManager.h  CoordTransform.h  DatabaseManager.h  ImageView.h  JsonSettings.h  Logger.h  MainWindow.h  MeasurementEngine.h  ReportManager.h  RobotClient.h  VisionProcessor.h
resources/templates/: example_template.shm
review_v2/: 00_summary.md  01_cpp_qt.md  02_halcon.md  03_industrial.md  04_devlog_compare.md  05_resume.md  06_ui_audit.md  08_measure_ux.md  09_ux_fix_plan.md  10_angle_bug.md  11_empty_label.md  12_fix2_scope.md  14_cppcheck.md  15_grep_patterns.md
src/: CalibrationManager.cpp  CalibrationWizard.cpp  CameraManager.cpp  CoordTransform.cpp  DatabaseManager.cpp  ImageView.cpp  JsonSettings.cpp  Logger.cpp  MainWindow.cpp  MeasurementEngine.cpp  ReportManager.cpp  RobotClient.cpp  VisionProcessor.cpp  main.cpp
tests/: CMakeLists.txt  test_coord_transform.cpp  test_crc.cpp
tests_manual/: README.md  T1_calibration_results.md  T2_positioning_results.md  T2_raw_data.csv  T3_grab_data.csv  T3_grab_results.md  T3_pybullet_data.csv  T3_pybullet_results.md  T4_stability_log.csv  T4_stability_results.md  T5_pressure_results.csv  T5_pressure_results.md  T5_raw_frames.csv  gen_caltab_screen.py  gen_synthetic_calib.py  pybullet_robot_simulator.py  t2_positioning_test.py  t3_robot_simulator.py  t4_stability_monitor.py  t5_pressure_test.py
